--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,8 @@
     "type": "project",
     "require": {
         "nette/robot-loader": "^4.0",
-        "guzzlehttp/guzzle": "^7.8"
+        "guzzlehttp/guzzle": "^7.8",
+        "league/flysystem": "^3.15"
     },
     "license": "MIT",
     "autoload": {
