SmartCalc No Di

--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,8 @@
         "nette/robot-loader": "^4.0",
         "guzzlehttp/guzzle": "^7.8",
         "symfony/filesystem": "^6.3.0",
-        "psr/container": "^2.0"
+        "psr/container": "^2.0",
+        "vlucas/phpdotenv": "^5.5"
     },
     "license": "MIT",
     "autoload": {
