--- a/composer.json
+++ b/composer.json
@@ -1,24 +1,25 @@
 {
-    "name": "root/app",
-    "description": "UrlShortner and other...",
-    "type": "project",
-    "require": {
-        "nette/robot-loader": "^4.0",
-        "guzzlehttp/guzzle": "^7.8",
-        "symfony/filesystem": "^6.3.0",
-        "psr/container": "^2.0",
-        "vlucas/phpdotenv": "^5.5"
-    },
-    "license": "MIT",
-    "autoload": {
-        "psr-4": {
-            "App\\": "src/"
-        }
-    },
-    "authors": [
-        {
-            "name": "Artem"
-        }
-    ],
-    "minimum-stability": "stable"
+  "name": "root/app",
+  "description": "UrlShortner and other...",
+  "type": "project",
+  "require": {
+    "nette/robot-loader": "^4.0",
+    "guzzlehttp/guzzle": "^7.8",
+    "symfony/filesystem": "^6.3.0",
+    "psr/container": "^2.0",
+    "vlucas/phpdotenv": "^5.5",
+    "ext-pdo": "*"
+  },
+  "license": "MIT",
+  "autoload": {
+    "psr-4": {
+      "App\\": "src/"
+    }
+  },
+  "authors": [
+    {
+      "name": "Artem"
+    }
+  ],
+  "minimum-stability": "stable"
 }
