--- a/composer.json
+++ b/composer.json
@@ -21,5 +21,8 @@
       "name": "Artem"
     }
   ],
-  "minimum-stability": "stable"
+  "minimum-stability": "stable",
+  "require-dev": {
+    "phpstan/phpstan": "^1.10"
+  }
 }
